--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,45 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/frontend/src/assets/favicon.ico" />
+    <link rel="icon" type="image/png" href="favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The Wave Lift App</title>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-    <!-- <footer>
-      <div class="footer-content">
-        <h3>Footer Info Here! Need to DO!</h3>
-        <p>More Footer info goes here....</p>
-        <ul class="socials">
-          <li>
-            <a href="#">facebook icon<i class="fa fa-facebook"></i></a>
-          </li>
-          <li>
-            <a href="#">twitter (X) icon<i class="fa fa-twitter"></i></a>
-          </li>
-          <li>
-            <a href="#">google icon<i class="fa fa-google-plus"></i></a>
-          </li>
-          <li>
-            <a href="#">youtube icon<i class="fa fa-youtube"></i></a>
-          </li>
-          <li>
-            <a href="#">linkedin icon<i class="fa fa-linkedin-square"></i></a>
-          </li>
-        </ul>
-        <div class="footer-bottom">
-          <p>copyright &copy; 2023 <a href="#">Hub City Advisors LLC</a></p>
-        </div>
-        <div class="footer-menu">
-          <ul class="f-menu">
-            <li><a href="/">Home</a></li>
-            <li><a href="">About</a></li>
-            <li><a href="">Contact</a></li>
-          </ul>
-        </div>
-      </div>
-    </footer> -->
   </body>
 </html>
